# hpki0

./: .env-local  .gitignore  .pdm-python  Dockerfile  LICENSE.md  Pipfile  README-pdjn.md  README.md  db.sqlite3  gulpfile.js  manage.py  package-lock.json  package.json  pyproject.toml  requirements-initial.txt  requirements-scratch.txt  requirements.txt  secrets.conf.example  to-final.diff  to-scratch.diff  webpack.config.js
cli/: README.md  pdjn.py
django-pol/: manage.py  project.db
django-pol/djpol/: asgi.py  wsgi.py
djcms/hpk/settings/: local.py
etc/: Dockerfile  Dockerfile.alpine  Dockerfile.opensuse  Dockerfile.ubuntu  base-settings.py  cli-pdjn.py  debug-settings.py  django-prod.py  docker-compose.yml  dotenv-local  env.debug  env.local  oh-my.zshrc  package-lock.json  pidjn_deps-core.ini  requirements-2020-09-20-1247.txt  requirements.txt  sass-lint.yml  settings-local.ini  webpack.config.js
etc/nginx/: Dockerfile  hpk.conf
etc/postgres/: Dockerfile
etc/salt/: minion.conf  supervisord-boxed.conf  top.sls
etc/salt/pillar/: nginx.sls  packages.sls  top.sls
etc/salt/pillar/users/: ada.sls  init.sls
hpk.io/: manage.py  project.db
hpk.io/djpol/: settings.py
hpk.io/hpk/: settings.py  wsgi.py
lib/: _vendor  foundation  motion-ui
picata/: wsgi.py
picata/settings/: base.py  dev.py
picata/templates/: base.html
react/: package-lock.json  package.json
src/: manage.py  project.db
src/cli/: pdjn.py  setup.py
src/hpk/: admin.py  asgi.py  cms_toolbars.py  models.py  urls.py  wsgi.py
src/hpk/management/commands/: generate_secret_key.py  utils.py
src/hpk/migrations/: 0001_initial.py
src/hpk/settings/: base.py  debug.py  prod.py  utils.py
src/js/: base.js  foundation_components.js  hpk.js  loader.js  main.js
src/js/lib/: foundation
src/sass/: styles.sass
src/sass/foundation/: _index.scss  _settings.scss
src/sass/lib/: _vendor  foundation  motion-ui
src/sass/lib/fontawesome/: scss  webfonts
src/scss/: _settings.scss  styles.sass  styles.scss
src/scss/foundation/: _index.scss  _settings.scss
src/scss/lib/: _vendor  motion-ui
src/templates/: gallery.html  regular_page.html
src/templates/cms/: base.html  default.html
src/templates/cms/admin/cms/page/tree/: base.html
src/templates/static/: skeleton-debug.html  skeleton-prod.html  skeleton.html
src/templates/styleguide/: index.hbs
var/fixtures/: latest.yaml
var/pgdumps/: _initial-2020-09-20.sql
