#
# Python build system configuration
# https://peps.python.org/pep-0518/
#

[build-system]
requires = [
  "hatchling",    # https://hatch.pypa.io/config/build/
  "versioningit", # https://versioningit.readthedocs.io/en/stable/
]
build-backend = "hatchling.build"

[project]
name = "picata"
dynamic = ["version"]
description = "These are my web pages."
readme = "README.md"
requires-python = ">=3.12.2"
license = "MIT"
keywords = []
authors = [{ name = "Ada Wright", email = "ada@hpk.io" }]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: Implementation :: CPython",
]
dependencies = []

[project.urls]
Documentation = "https://github.com/hipikat/picata#readme"
Issues = "https://github.com/hipikat/picata/issues"
Source = "https://github.com/hipikat/picata"

#
# Coverage - https://coverage.readthedocs.io/
#
[tool.coverage.run]
source_pkgs = ["picata", "tests"]
branch = true
parallel = true

[tool.coverage.paths]
tests = ["tests", "*/picata/tests"]

[tool.coverage.report]
exclude_lines = ["no cov", "if __name__ == .__main__.:", "if TYPE_CHECKING:"]

#
# Poetry - https://python-poetry.org/
# Only used for dependency management
#
[tool.poetry]
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
wagtail = "^6.0.2"
click = "^8.1.7"
versioningit = "^3.1.0"

[tool.poetry.group.dev.dependencies]
ipython = "^8.23.0"

#
# Hatch configuration - https://hatch.pypa.io/
#
[tool.hatch]
version.source = "versioningit"

# Environment: Default
[tool.hatch.envs.default]
dependencies = ["coverage[toml]>=6.5", "pytest"]

[tool.hatch.envs.default.scripts]
test = "pytest {args:tests}"
test-cov = "coverage run -m pytest {args:tests}"
cov-report = ["- coverage combine", "coverage report"]
cov = ["test-cov", "cov-report"]

# Environment: Test
[tool.hatch.envs.test]
dependencies = ["coverage[toml]", "pytest", "pytest-cov"]

[tool.hatch.envs.test.scripts]
cov = 'pytest --cov-report=term-missing --cov-config=pyproject.toml --cov=pkg --cov=tests'

# Environment: Types
[tool.hatch.envs.types]
dependencies = ["mypy>=1.0.0"]
[tool.hatch.envs.types.scripts]
check = "mypy --install-types --non-interactive {args:src/eyrie tests}"

# Environment matrix
# https://hatch.pypa.io/1.9/config/environment/advanced/#matrix
[[tool.hatch.envs.all.matrix]]
python = ["3.12"]
wagtail = ["6.0"]

#
# versioningit - https://versioningit.readthedocs.io/
#
[tool.versioningit]
default-version = "0.0.0+unknown"

[tool.versioningit.format]
# When there have been commits since the most recent tag:
distance = "{next_version}.dev{distance}+{vcs}{rev}"
# When there are uncommitted changes:
dirty = "{version}+dirty"
# When there are both commits and uncommitted changes:
distance-dirty = "{next_version}.dev{distance}+{vcs}{rev}.dirty"
